--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.nav{
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  bottom: 0;
+  background: #FFCC07;
+}
+
+.nav ul{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
