--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,7 @@
   }
   
   .nav {
-    background-color: #333;
-    color: white;
+    color: #4B4B4B;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
