--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -43,10 +47,39 @@
   height: 60px;
   bottom: 0;
   background: #FFCC07;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  padding: 0 1rem;
 }
 
 .nav ul{
   display: flex;
   width: 100%;
   justify-content: space-around;
+  max-width: 900px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  gap: 1rem;
+}
+
+.nav a {
+  color: inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: .25rem;
+}
+
+.nav li{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.nav li:hover {
+  background-color: #e2a600;
 }
