--- a/src/Pages/Chatbot/Components/style/LogoTri.css
+++ b/src/Pages/Chatbot/Components/style/LogoTri.css
@@ -1,4 +1,9 @@
+.logos-tri {
+    display: flex;
+}
+
 .logo-tri {
-    height: 75px;
-    width: 75px;
+    height: 50px;
+    width: 50px;
+    margin: 0 5px;
 }
