--- a/src/Pages/Chatbot/Components/style/Options.css
+++ b/src/Pages/Chatbot/Components/style/Options.css
@@ -11,6 +11,7 @@
     background-color: #FFCC07;
     text-align: center;
     font-size: 0.9rem;
+    cursor: pointer;
 }
 
 .option-button:hover {
