--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,36 @@
+:root{
+  --color1:#069B3E;
+  --color2:#408C32;
+  --color3:#fFCC07;
+  --color4:#969696;
+  --color5:#4B4B4B;
+  --color6:#FFFFFF; 
+}
+
+
+.titre1{
+  font-family: BebasNeueRegular ;
+  color: var(--color1) ;
+  text-transform : uppercase;
+}
+p, 
+.btn{
+  font-family: RobotoBold;
+}
+.btn{
+  color: var(--color6);
+}
+.btn-primary{
+  background-color: var(--color1);
+  font-size: 20px;
+}
+.btn-warning{
+  background-color: var(--color3);
+  font-size: 20px;
+}
 .App {
   text-align: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -28,6 +57,8 @@
   color: #61dafb;
 }
 
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +67,5 @@
     transform: rotate(360deg);
   }
 }
+
+
