--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,9 @@ body,
 
 .nav{
   position: absolute;
+  bottom: 0;
   width: 100%;
   height: 60px;
-  bottom: 0;
   background: #FFCC07;
   display: flex;
   justify-content: center;
@@ -99,26 +99,82 @@ h1{
   font-family: 'Bebas Neue', sans-serif;
   color: green;
   font-weight: bold;
+  font-size: 40px;
 }
 
 h2{
   font-family: 'Bebas Neue', sans-serif;
+  color: green;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 p{
   font-family: 'Roboto', sans-serif;
+  color : #4B4B4B;
+}
+
+/** TEXT ALIGN **/
+
+.text-align-c{
+  text-align: center;
 }
 
 /** IMAGES **/
 .logoLemonTri{
   max-width: 200px;
+  margin: 30px;
 }
+
+#citronAccueil{
+  max-width: 40%;
+  height: auto;
+  position: absolute;
+  right: 0px;
+  transform: rotate(-5deg) ;
+}
+
+#logoAccueil{
+  align-self: center;
+}
+
+/** MARGINS **/
 
 .margins{
   margin: 20px;
 }
 
+.margin-t-100{
+  margin-top: 100px;
+}
+
+.m-b-0{
+  margin-bottom: 0;
+}
+
 /** PAGE ACCUEIL **/
 .titleAccueil{
-  max-width: 60%;
+  width: 60%;
 }
+
+/** DISPLAY FLEX **/
+
+.flex-row{
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-col{
+  display: flex;
+  flex-direction: column;
+}
+
+.space-bet{
+  justify-content: space-between;
+}
+
+.center{
+  justify-content: center;
+  align-items: center;
+}
+
