--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+/** IMPORTS **/
+@import url('https://fonts.cdnfonts.com/css/bebas-neue');
+@import url('https://fonts.cdnfonts.com/css/roboto');
+
+/** GLOBAL DATA **/
+
 :root{
   --color1:#069B3E;
   --color2:#408C32;
@@ -6,7 +12,6 @@
   --color5:#4B4B4B;
   --color6:#FFFFFF; 
 }
-
 
 .titre1{
   font-family: BebasNeueRegular ;
@@ -28,9 +33,6 @@ p,
   background-color: var(--color3);
   font-size: 20px;
 }
-/** IMPORTS **/
-@import url('https://fonts.cdnfonts.com/css/bebas-neue');
-@import url('https://fonts.cdnfonts.com/css/roboto');
 
 /** GENERAL **/
 html,
@@ -70,8 +72,6 @@ body,
 .App-link {
   color: #61dafb;
 }
-
-
 
 @keyframes App-logo-spin {
   from {
