info bulle de la page devis

--- a/src/App.css
+++ b/src/App.css
@@ -169,7 +169,7 @@ p.infoBulle{
   height: auto;
 }
 .citronTri{
-  margin-top: 50%;
+  margin-top: 20%;
 }
 .citronJoie{
   max-width: 60% !important;
@@ -177,7 +177,11 @@ p.infoBulle{
   margin-top: 20%;
   z-index: 1;
 }
-
+.citronBureau{
+  max-width: 50%;
+  margin-right: 100%;
+  margin-top: 54%;
+}
 #logoAccueil{
   justify-self: center;
 }
@@ -274,21 +278,21 @@ input.champRemplir{
 .infoBulle{
   background: var(--color1);
   border-radius: 30px;
-  top: 15%;
+  top: 9%;
   left: 6%;
   padding: 5px 15px;
   position: absolute;
-  width: 60%;
+  width: 80%;
   color: var(--color6);
 }
 .infoBulle::after{
   border: solid;
   border-color: var(--color1) transparent;
   border-width: 39px 17px 0 20px;
-  transform: rotate(-45deg);
-  bottom: -15px;
+  transform: rotate(-20deg);
+  bottom: -32px;
   content: "";
-  left: 90%;
+  left: 60%;
   position: absolute;
   z-index: 99;
 }
@@ -313,6 +317,28 @@ input.champRemplir{
   left: 95%;
   position: absolute;
 } 
+.infoBulle2{
+  background: var(--color1);
+  border-radius: 30px;
+  bottom: 15%;
+  right: 2%;
+  padding: 5px 15px;
+  position: absolute;
+  width: 54%;  
+  color: var(--color6);
+}
+.infoBulle2::after{
+  border: solid;
+  border-color: var(--color1) transparent;
+  border-width: 39px 17px 0 20px;
+  transform: rotate(50deg);
+  bottom: 5px;
+  content: "";
+  right: 93%;
+  position: absolute;
+} 
+
+/* Retour */
 .retour{
   font-family: 'Bebas Neue', sans-serif;
   font-size: 30px;
