--- a/src/App.css
+++ b/src/App.css
@@ -270,3 +270,12 @@ input.champRemplir{
 .hoverCursor:hover{
   cursor:pointer;
 }
+
+.profil-circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 3px solid black;
+  background-image: url("./img/Jardin_1.webp");
+  background-size: cover;
+}
