--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,54 @@ p.infoBulle{
   max-width: 60%;
   margin-top: 15%;
 }
+.citronQuizz{
+  max-width: 100%;
+  margin-top: -5%;
+}
+.citronCategorie{
+  max-width: 30%;
+  margin-right: 10%;
+}
+
+.boutonQuizz{
+  margin-top: 15%;
+}
+.nb{
+  position:absolute;
+  top:375px; 
+  width:500px; 
+  height:400px; 
+  left: 65px;
+  z-index:2;
+  font-size:200%
+}
+.nb1{
+  position:absolute;
+  top:59%; 
+  width:500px; 
+  height:400px; 
+  left: 65px;
+  z-index:2;
+  font-size:200%
+}
+.nb2{
+  position:absolute;
+  top:76%; 
+  width:500px; 
+  height:400px; 
+  left: 65px;
+  z-index:2;
+  font-size:200%
+}
+.nb3{
+  position:absolute;
+  top:94%; 
+  width:500px; 
+  height:400px; 
+  left: 65px;
+  z-index:2;
+  font-size:200%
+}
 
 #logoAccueil{
   justify-self: center;
